Kubernetes/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-app-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app-web
    spec:
      containers:
        - image: mbps54/app-web:multisession
          name: app-web
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 1000m
              memory: 1000Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 20
          startupProbe:
            httpGet:
              path: /
              port: 8000
            failureThreshold: 20
            periodSeconds: 10
...
