Kubernetes/Deployment_db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-app-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-redis
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app-redis
    spec:
      containers:
        - image: redis:latest
          name: app-redis
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
...
