Kubernetes/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-web
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: app-web
  type: ClusterIP
...

---
apiVersion: v1
kind: Service
metadata:
  name: app-redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: app-redis
  type: ClusterIP
...
